Configure database connection

--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,8 @@ ENCRYPTER_KEY={encrypt-key}
 
 # Set to TRUE to disable confirmation in `migrate` commands.
 SAFE_MIGRATIONS=true
+
+DB_HOST=localhost:33060
+DB_NAME=cashtrack
+DB_USER=cashtrack
+DB_PASSWORD=secret
