--- a/composer.json
+++ b/composer.json
@@ -37,13 +37,24 @@
     "cycle/proxy-factory": "^1.0",
     "cycle/annotated": "^2.0",
     "cycle/migrations": "^1.0",
-    "ramsey/uuid": "^4.0"
+    "ramsey/uuid": "^4.0",
+    "voku/portable-utf8": "^5.4"
+  },
+  "replace": {
+    "symfony/polyfill-php72": "1.99",
+    "symfony/polyfill-iconv": "1.99",
+    "symfony/polyfill-intl-grapheme": "1.99",
+    "symfony/polyfill-intl-normalizer": "1.99",
+    "symfony/polyfill-mbstring": "1.99"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.5"
   },
   "scripts": {},
   "autoload": {
+    "files": [
+      "app/helpers/str.php"
+    ],
     "psr-4": {
       "App\\": "app/src/"
     }
