Implement basic JWT authentication.

--- a/.env.sample
+++ b/.env.sample
@@ -7,6 +7,10 @@ ENCRYPTER_KEY={encrypt-key}
 # Set to TRUE to disable confirmation in `migrate` commands.
 SAFE_MIGRATIONS=true
 
+JWT_SECRET=
+JWT_TTL=3600
+JWT_REFRESH_TTL=604800
+
 DB_HOST=localhost:33060
 DB_NAME=cashtrack
 DB_USER=cashtrack
