--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
     "voku/portable-utf8": "^5.4",
     "spiral/auth": "^1.0",
     "spiral/auth-http": "^1.0",
-    "firebase/php-jwt": "^5.2"
+    "firebase/php-jwt": "^5.2",
+    "spiral/annotated-routes": "^1.1"
   },
   "replace": {
     "symfony/polyfill-php72": "1.99",
