Implement profile API endpoint. Add ability to log database queries.

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
   ],
   "require": {
     "php": ">=7.2",
+    "ext-mbstring": "*",
     "spiral/framework": "^2.0",
     "spiral/snapshots": "^1.0",
     "spiral/console": "^1.2",
