Add Firebase Admin SDK integration.

--- a/.env.sample
+++ b/.env.sample
@@ -15,3 +15,14 @@ DB_HOST=localhost:33060
 DB_NAME=cashtrack
 DB_USER=cashtrack
 DB_PASSWORD=secret
+
+FIREBASE_DATABASE_URI=
+FIREBASE_PROJECT_ID=
+FIREBASE_CLIENT_EMAIL=
+FIREBASE_CLIENT_ID=
+FIREBASE_AUTH_URI=
+FIREBASE_TOKEN_URI=
+FIREBASE_AUTH_PROVIDER_X509_CERT_URL=
+FIREBASE_CLIENT_X509_CERT_URL=
+FIREBASE_PRIVATE_KEY_ID=
+FIREBASE_PRIVATE_KEY=
