--- a/.env.sample
+++ b/.env.sample
@@ -17,6 +17,7 @@ DB_USER=cashtrack
 DB_PASSWORD=secret
 
 FIREBASE_DATABASE_URI=
+FIREBASE_STORAGE_BUCKET=
 FIREBASE_PROJECT_ID=
 FIREBASE_CLIENT_EMAIL=
 FIREBASE_CLIENT_ID=
@@ -26,3 +27,11 @@ FIREBASE_AUTH_PROVIDER_X509_CERT_URL=
 FIREBASE_CLIENT_X509_CERT_URL=
 FIREBASE_PRIVATE_KEY_ID=
 FIREBASE_PRIVATE_KEY=
+
+S3_REGION=us-east-1
+S3_ENDPOINT=
+S3_KEY=
+S3_SECRET=
+
+CDN_HOST=
+CDN_BUCKET=
