Implement sending mail.

--- a/.env.sample
+++ b/.env.sample
@@ -35,3 +35,10 @@ S3_SECRET=
 
 CDN_HOST=
 CDN_BUCKET=
+
+MAIL_DRIVER=smtp
+MAIL_HOST=
+MAIL_POST=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=
