Email confirmation implementation.

--- a/.env.sample
+++ b/.env.sample
@@ -7,6 +7,8 @@ ENCRYPTER_KEY={encrypt-key}
 # Set to TRUE to disable confirmation in `migrate` commands.
 SAFE_MIGRATIONS=true
 
+APP_URL=http://localhost:8080
+
 JWT_SECRET=
 JWT_TTL=3600
 JWT_REFRESH_TTL=604800
