--- a/.env.sample
+++ b/.env.sample
@@ -12,6 +12,8 @@ APP_URL=http://localhost:8080
 JWT_SECRET=
 JWT_TTL=3600
 JWT_REFRESH_TTL=604800
+JWT_PUBLIC_KEY=""
+JWT_PRIVATE_KEY=""
 
 DB_HOST=localhost:33060
 DB_NAME=cashtrack
