--- a/.env.sample
+++ b/.env.sample
@@ -8,6 +8,8 @@ ENCRYPTER_KEY={encrypt-key}
 SAFE_MIGRATIONS=true
 
 APP_URL=http://localhost:8080
+WEBSITE_URL=http://localhost:3000
+WEB_APP_URL=http://localhost:8081
 
 JWT_SECRET=
 JWT_TTL=3600
