Implement commands for move data from old database schema to new

--- a/.env.sample
+++ b/.env.sample
@@ -22,6 +22,11 @@ DB_NAME=cashtrack
 DB_USER=cashtrack
 DB_PASSWORD=secret
 
+DB_OLD_HOST=localhost:33060
+DB_OLD_NAME=production
+DB_OLD_USER=root
+DB_OLD_PASSWORD=secret
+
 FIREBASE_DATABASE_URI=
 FIREBASE_STORAGE_BUCKET=
 FIREBASE_PROJECT_ID=
