Update framework and webserver versions.

--- a/composer.json
+++ b/composer.json
@@ -18,22 +18,23 @@
     "ext-mbstring": "*",
     "ext-openssl": "*",
     "ext-pdo": "*",
-    "spiral/framework": "^2.7",
+    "spiral/framework": "^2.8",
     "spiral/jobs": "^2.0",
-    "spiral/roadrunner": "^1.4",
-    "spiral/database": "^2.3",
-    "spiral/migrations": "^2.0",
-    "spiral/nyholm-bridge": "^1.0",
+    "spiral/roadrunner": "^v1.9.2",
+    "spiral/database": "^2.8",
+    "spiral/migrations": "^2.2",
+    "spiral/nyholm-bridge": "^1.1",
     "cycle/orm": "^1.0",
     "cycle/proxy-factory": "^1.0",
     "cycle/annotated": "^2.0",
     "cycle/migrations": "^1.0",
-    "ramsey/uuid": "^4.0",
+    "ramsey/uuid": "^4.2",
     "voku/portable-utf8": "^5.4",
     "firebase/php-jwt": "^5.2",
     "kreait/firebase-php": "^5.0",
-    "aws/aws-sdk-php": "^3.140",
-    "swiftmailer/swiftmailer": "^6.0"
+    "aws/aws-sdk-php": "^3.190",
+    "swiftmailer/swiftmailer": "^6.2",
+    "laminas/laminas-diactoros": "^2.6"
   },
   "replace": {
     "symfony/polyfill-php72": "1.99",
