--- a/.env.actions
+++ b/.env.actions
@@ -14,7 +14,7 @@ JWT_PRIVATE_KEY=""
 
 DB_HOST=localhost:3306
 DB_NAME=cashtrack
-DB_USER=root
+DB_USER=cashtrack
 DB_PASSWORD=secret
 
 S3_REGION=us-east-1
