--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -16,7 +16,7 @@ jobs:
     env:
       DB_HOST: localhost:3306
       DB_NAME: cashtrack
-      DB_USER: cashtrack
+      DB_USER: root
       DB_PASSWORD: secret
 
     services:
@@ -36,7 +36,6 @@ jobs:
 
       - name: Setup MySQL
         run: |
-          sudo /etc/init.d/mysql start
           mysql -e 'CREATE DATABASE ${{ env.DB_NAME }};' -u${{ env.DB_USER }} -p${{ env.DB_PASSWORD }}
 
       - name: Setup PHP with PECL extension
