--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -14,7 +14,7 @@ jobs:
       packages: write
 
     env:
-      DB_HOST: localhost:3306
+      DB_HOST: mysql:3306
       DB_NAME: cashtrack
       DB_USER: root
       DB_PASSWORD: secret
@@ -56,7 +56,7 @@ jobs:
 
       - name: Setup application
         env:
-          DB_HOST: localhost:${{ job.services.mysql.ports['3306'] }}
+          DB_HOST: mysql:${{ job.services.mysql.ports['3306'] }}
         run: |
           cp .env.actions .env
           composer install --no-progress --prefer-dist --optimize-autoloader
@@ -68,5 +68,5 @@ jobs:
 
       - name: Run tests
         env:
-          DB_HOST: localhost:${{ job.services.mysql.ports['3306'] }}
+          DB_HOST: mysql:${{ job.services.mysql.ports['3306'] }}
         run: ./vendor/bin/phpunit
