Trying to access mysql service in actions #5

--- a/.env.actions
+++ b/.env.actions
@@ -12,9 +12,9 @@ JWT_REFRESH_TTL=604800
 JWT_PUBLIC_KEY=""
 JWT_PRIVATE_KEY=""
 
-DB_HOST=localhost:3306
+DB_HOST=0.0.0.0:33060
 DB_NAME=cashtrack
-DB_USER=cashtrack
+DB_USER=root
 DB_PASSWORD=secret
 
 S3_REGION=us-east-1
