Trying to access mysql service in actions #6

--- a/.env.actions
+++ b/.env.actions
@@ -6,7 +6,7 @@ APP_URL=http://localhost:8080
 WEBSITE_URL=http://localhost:3000
 WEB_APP_URL=http://localhost:8081
 
-JWT_SECRET=
+JWT_SECRET=verysecretphrase
 JWT_TTL=3600
 JWT_REFRESH_TTL=604800
 JWT_PUBLIC_KEY=""
