--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -89,8 +89,8 @@ jobs:
               --name ${{ env.CONTAINER_NAME }} \
               -p 3002:8080 \
               --net host \
-              -v ${{ env.WORKDIR }}/runtime/logs:/app/runtime/logs
-              -v ${{ env.WORKDIR }}/runtime/snapshots:/app/runtime/snapshots
+              -v ${{ env.WORKDIR }}/runtime/logs:/app/runtime/logs \
+              -v ${{ env.WORKDIR }}/runtime/snapshots:/app/runtime/snapshots \
               --env-file ${{ env.WORKDIR }}/.env \
               ${{ env.IMAGE }}
             ./api_run.sh ${{ env.IMAGE }} app.php cache:clean
