--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -58,5 +58,8 @@ jobs:
           php app.php migrate:init
           php app.php migrate
 
-      - name: Run tests
+      - name: Run PHPUnit
         run: ./vendor/bin/phpunit
+
+      - name: Run Code Sniffer
+        run: ./vendor/bin/phpcs -p -n --standard=PSR12 --colors --report=code ./app/src
