--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
     "symfony/polyfill-mbstring": "1.99"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.5|^9.0"
+    "phpunit/phpunit": "^8.5|^9.0",
+    "squizlabs/php_codesniffer": "3.*"
   },
   "scripts": {
     "post-create-project-cmd": [
