Install and configure Psalm. Update code according to static analysis report

--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -63,3 +63,6 @@ jobs:
 
       - name: Run Code Sniffer
         run: ./vendor/bin/phpcs -p -n --standard=PSR12 --colors --report=code ./app/src
+
+      - name: Run Psalm
+        run: ./vendor/bin/psalm --php-version=8.0 --show-info=true
