--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^8.5|^9.0",
-    "squizlabs/php_codesniffer": "3.*"
+    "squizlabs/php_codesniffer": "3.*",
+    "vimeo/psalm": "^4.9"
   },
   "scripts": {
     "post-create-project-cmd": [
