Avoid initialisation primary key models property. Update primary key implicit usage to keep original type

--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -75,4 +75,4 @@ jobs:
         run: ./vendor/bin/phpcs -p -n --standard=PSR12 --colors --report=code ./app/src
 
       - name: Run Psalm
-        run: ./vendor/bin/psalm --php-version=8.0 --show-info=true
+        run: ./vendor/bin/psalm --php-version=8.0 --show-info=true --no-cache
