--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,13 @@
       "email": "vovikems@gmail.com"
     }
   ],
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/vokomarov/database",
+      "no-api": true
+    }
+  ],
   "require": {
     "php": ">=8.0",
     "ext-mbstring": "*",
@@ -21,7 +28,7 @@
     "spiral/framework": "^2.8",
     "spiral/jobs": "^2.0",
     "spiral/roadrunner": "^v1.9.2",
-    "spiral/database": "^2.8",
+    "spiral/database": "dev-fix-mysqlnd-exceptions-mapping as v2.9.2",
     "spiral/migrations": "^2.2",
     "spiral/nyholm-bridge": "^1.1",
     "cycle/orm": "^1.0",
