--- a/.env.actions
+++ b/.env.actions
@@ -10,7 +10,7 @@ JWT_SECRET=verysecretphrase
 JWT_TTL=3600
 JWT_REFRESH_TTL=604800
 JWT_PUBLIC_KEY="{rsa-public-key}"
-JWT_PRIVATE_KEY="{rsa-private_key}"
+JWT_PRIVATE_KEY="{rsa-private-key}"
 
 DB_HOST=0.0.0.0:33060
 DB_NAME=cashtrack
