--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,7 @@
       "./vendor/bin/phpcs -p -n --standard=PSR12 --colors --report=code ./app/src"
     ],
     "psalm": [
-      "./vendor/bin/psalm --php-version=8.0 --show-info=true"
+      "./vendor/bin/psalm --php-version=8.0 --show-info=true --no-cache"
     ]
   },
   "autoload": {
