--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -145,7 +145,7 @@ jobs:
           php app.php migrate
 
       - name: Run PHPUnit
-        run: ./vendor/bin/phpunit --coverage-clover=coverage.xml --debug
+        run: ./vendor/bin/phpunit --coverage-clover=coverage.xml
 
       - name: Upload Coverage To Codecov
         continue-on-error: true
