Big refactoring. Framework, ORM and RR upgrade

--- a/.env.sample
+++ b/.env.sample
@@ -11,6 +11,8 @@ APP_URL=http://localhost:8080
 WEBSITE_URL=http://localhost:3000
 WEB_APP_URL=http://localhost:8081
 
+CACHE_STORAGE=file
+
 JWT_SECRET=
 JWT_TTL=3600
 JWT_REFRESH_TTL=604800
