--- a/composer.json
+++ b/composer.json
@@ -14,39 +14,30 @@
     }
   ],
   "require": {
-    "php": ">=8.0",
+    "php": ">=8.1",
     "ext-mbstring": "*",
     "ext-openssl": "*",
     "ext-pdo": "*",
-    "spiral/framework": "^2.8",
-    "spiral/jobs": "^2.0",
-    "spiral/roadrunner": "^v1.9.2",
-    "spiral/database": "v2.9.3",
-    "spiral/migrations": "^2.2",
-    "spiral/nyholm-bridge": "^1.1",
-    "cycle/orm": "^v1.7",
-    "cycle/proxy-factory": "^1.0",
-    "cycle/annotated": "^2.0",
-    "cycle/migrations": "^1.0",
-    "ramsey/uuid": "^4.2",
-    "voku/portable-utf8": "^5.4",
+    "aws/aws-sdk-php": "^3.190",
+    "cycle/entity-behavior": "^1.1",
+    "cycle/entity-behavior-uuid": "^1.0",
+    "doctrine/collections": "^1.6",
     "firebase/php-jwt": "^5.2",
     "kreait/firebase-php": "^5.0",
+    "laminas/laminas-diactoros": "^2.6",
     "lcobucci/jwt": "4.1.5",
-    "aws/aws-sdk-php": "^3.190",
+    "ramsey/uuid": "^4.2",
+    "spiral/cycle-bridge": "^v1.2",
+    "spiral/framework": "^2.11",
+    "spiral/nyholm-bridge": "^1.1",
+    "spiral/roadrunner-bridge": "^1.0",
     "swiftmailer/swiftmailer": "^6.2",
-    "laminas/laminas-diactoros": "^2.6"
-  },
-  "replace": {
-    "symfony/polyfill-php72": "1.99",
-    "symfony/polyfill-iconv": "1.99",
-    "symfony/polyfill-intl-grapheme": "1.99",
-    "symfony/polyfill-intl-normalizer": "1.99",
-    "symfony/polyfill-mbstring": "1.99"
+    "voku/portable-utf8": "^5.4"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.5|^9.0",
+    "phpunit/phpunit": "^9.5",
     "squizlabs/php_codesniffer": "3.*",
+    "spiral/testing": "^1.1",
     "vimeo/psalm": "^4.9"
   },
   "scripts": {
@@ -68,7 +59,7 @@
       "./vendor/bin/phpcs -p -n --standard=PSR12 --colors --report=code ./app/src"
     ],
     "psalm": [
-      "./vendor/bin/psalm --php-version=8.0 --show-info=true --no-cache"
+      "./vendor/bin/psalm --php-version=8.1 --show-info=true --no-cache"
     ]
   },
   "autoload": {
@@ -91,7 +82,10 @@
     }
   },
   "config": {
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "spiral/composer-publish-plugin": true
+    }
   },
   "minimum-stability": "dev",
   "prefer-stable": true
