--- a/.env.actions
+++ b/.env.actions
@@ -1,10 +1,12 @@
-DEBUG=true
+DEBUG=false
 ENCRYPTER_KEY={encrypt-key}
 SAFE_MIGRATIONS=true
 
 APP_URL=http://localhost:8080
 WEBSITE_URL=http://localhost:3000
 WEB_APP_URL=http://localhost:8081
+
+CACHE_STORAGE=file
 
 JWT_SECRET=verysecretphrase
 JWT_TTL=3600
