--- a/.rr.yaml
+++ b/.rr.yaml
@@ -1,27 +1,20 @@
+version: '2.8'
+
+rpc:
+  listen: tcp://127.0.0.1:6001
+
+server:
+  command: "php app.php"
+  relay: pipes
+
 http:
   address: 0.0.0.0:8080
-  workers:
-    command: "php app.php"
-
-jobs:
-  dispatch:
-    app-job-*.pipeline: "local"
-  pipelines:
-    local:
-      broker: "ephemeral"
-  consume: ["local"]
-  workers:
-    command: "php app.php"
-    pool.numWorkers: 2
-
-static:
-  dir:    "public"
-  forbid: [".php", ".htaccess"]
+  middleware: [ "gzip" ]
+  pool:
+    max_jobs: 1
+    num_workers: 1
+    supervisor:
+      max_worker_memory: 100
 
 metrics:
   address: localhost:2112
-
-limit:
-  services:
-    http.maxMemory: 100
-    jobs.maxMemory: 100
