--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "cycle/entity-behavior-uuid": "^1.0",
     "doctrine/collections": "^1.6",
     "firebase/php-jwt": "^5.2",
+    "illuminate/collections": "^9.8",
     "kreait/firebase-php": "^5.0",
     "laminas/laminas-diactoros": "^2.6",
     "lcobucci/jwt": "4.1.5",
