Remove unused relation and update code and tests

--- a/.rr.yaml
+++ b/.rr.yaml
@@ -11,10 +11,12 @@ http:
   address: 0.0.0.0:8080
   middleware: [ "gzip" ]
   pool:
-    max_jobs: 1
-    num_workers: 1
     supervisor:
       max_worker_memory: 100
+
+logs:
+  mode: production
+  level: info
 
 metrics:
   address: localhost:2112
