--- a/.env.sample
+++ b/.env.sample
@@ -16,8 +16,8 @@ CACHE_STORAGE=file
 JWT_SECRET=
 JWT_TTL=3600
 JWT_REFRESH_TTL=604800
-JWT_PUBLIC_KEY=""
-JWT_PRIVATE_KEY=""
+JWT_PUBLIC_KEY="{rsa-public-key}"
+JWT_PRIVATE_KEY="{rsa-private-key}"
 
 DB_HOST=localhost:33060
 DB_NAME=cashtrack
