--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,10 +10,11 @@ env:
   INFRA_REPO_REF: main
   CLUSTER: k8s-cash-track
   NAMESPACE: cash-track
+  KUBECTL_BIN: https://storage.googleapis.com/kubernetes-release/release/v1.23.9/bin/linux/amd64/kubectl
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux, x64]
     permissions:
       contents: read
       packages: write
@@ -55,7 +56,7 @@ jobs:
 
   deploy:
     needs: [ build ]
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux, x64]
     permissions:
       contents: read
       packages: write
@@ -72,6 +73,12 @@ jobs:
         uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+
+      - name: Install kubectl
+        run: |
+          curl -LO ${{ env.KUBECTL_BIN }}
+          chmod +x ./kubectl
+          sudo mv ./kubectl /usr/local/bin/kubectl
 
       - name: Configure kubectl
         run: doctl kubernetes cluster kubeconfig save --expiry-seconds 600 ${{ env.CLUSTER }}
