--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -143,7 +143,8 @@ jobs:
 
       - name: Setup Application
         run: |
-          docker ps -a
+          ss -ltnp
+          ./usr/local/bin/docker ps -a
           cp .env.actions .env
           composer install --no-progress --no-interaction --prefer-dist --optimize-autoloader
           php app.php encrypt:key -m .env
