--- a/.env.actions
+++ b/.env.actions
@@ -14,7 +14,8 @@ JWT_REFRESH_TTL=604800
 JWT_PUBLIC_KEY="{rsa-public-key}"
 JWT_PRIVATE_KEY="{rsa-private-key}"
 
-DB_HOST=0.0.0.0:33060
+1DB_HOST=0.0.0.0:33060
+DB_HOST=host.docker.internal:33060
 DB_NAME=cashtrack
 DB_USER=root
 DB_PASSWORD=secret
