Try to fix php setup #9

--- a/.env.actions
+++ b/.env.actions
@@ -15,7 +15,7 @@ JWT_PUBLIC_KEY="{rsa-public-key}"
 JWT_PRIVATE_KEY="{rsa-private-key}"
 
 1DB_HOST=0.0.0.0:33060
-DB_HOST=mysql:33060
+DB_HOST=localhost:33060
 DB_NAME=cashtrack
 DB_USER=root
 DB_PASSWORD=secret
