Try to fix php setup #13

--- a/.env.actions
+++ b/.env.actions
@@ -14,7 +14,7 @@ JWT_REFRESH_TTL=604800
 JWT_PUBLIC_KEY="{rsa-public-key}"
 JWT_PRIVATE_KEY="{rsa-private-key}"
 
-DB_HOST=mysql:33060
+DB_HOST=127.0.0.1:33060
 DB_NAME=cashtrack
 DB_USER=root
 DB_PASSWORD=secret
