--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,31 +106,17 @@ jobs:
       contents: read
       packages: write
 
-#    services:
-#      mysql:
-#        image: mysql:8.0
-#        env:
-#          MYSQL_ALLOW_EMPTY_PASSWORD: false
-#          MYSQL_ROOT_PASSWORD: secret
-#          MYSQL_DATABASE: cashtrack
-#        ports:
-#          - 33060:3306
-#        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+    services:
+      mysql:
+        image: cashtrack/mysql:latest
+        env:
+          MYSQL_ROOT_PASSWORD: secret
+          MYSQL_DATABASE: cashtrack
+        ports:
+          - 3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
-      - name: Setup MySQL
-        uses: mirromutth/mysql-action@v1.1
-        with:
-          #host port: 3800 # Optional, default value is 3306. The port of host
-          #container port: 3307 # Optional, default value is 3306. The port of container
-          #character set server: 'utf8' # Optional, default value is 'utf8mb4'. The '--character-set-server' option for mysqld
-          #collation server: 'utf8_general_ci' # Optional, default value is 'utf8mb4_general_ci'. The '--collation-server' option for mysqld
-          mysql version: '8.0' # Optional, default value is "latest". The version of the MySQL
-          mysql database: 'cashtrack' # Optional, default value is "test". The specified database which will be create
-          mysql root password: secret # Required if "mysql user" is empty, default is empty. The root superuser password
-          #mysql user: 'cashtrack' # Required if "mysql root password" is empty, default is empty. The superuser for the specified database. Can use secrets, too
-          #mysql password: secret # Required if "mysql user" exists. The password for the "mysql user"
-
       - name: Checkout Repository
         uses: actions/checkout@v2
 
