--- a/.env.actions
+++ b/.env.actions
@@ -16,7 +16,7 @@ JWT_PRIVATE_KEY="{rsa-private-key}"
 
 DB_HOST=mysql:3306
 DB_NAME=cashtrack
-DB_USER=root
+DB_USER=cashtrack
 DB_PASSWORD=secret
 
 S3_REGION=us-east-1
