--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,17 +106,17 @@ jobs:
       contents: read
       packages: write
 
-    services:
-      mysql:
-        image: cashtrack/mysql:latest
-        env:
-          MYSQL_ROOT_PASSWORD: secret
-          MYSQL_DATABASE: cashtrack
-          MYSQL_USER: cashtrack
-          MYSQL_PASSWORD: secret
-        ports:
-          - 3306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+#    services:
+#      mysql:
+#        image: cashtrack/mysql:latest
+#        env:
+#          MYSQL_ROOT_PASSWORD: secret
+#          MYSQL_DATABASE: cashtrack
+#          MYSQL_USER: cashtrack
+#          MYSQL_PASSWORD: secret
+#        ports:
+#          - 3307:3306
+#        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
       - name: Checkout Repository
