--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -119,6 +119,9 @@ jobs:
 #        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
+      - name: Stop initial DB
+        run: sudo /etc/init.d/mysql stop
+
       - name: Checkout Repository
         uses: actions/checkout@v2
 
