Finish fixing test pipeline

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,6 @@ jobs:
   security:
     name: Security
     runs-on: [self-hosted, Linux, x64]
-    if: false
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -26,7 +25,6 @@ jobs:
 
   static-analysis:
     name: Static Analysis
-    if: false
     runs-on: [self-hosted, Linux, x64]
     container: shivammathur/node:latest
     steps:
@@ -63,7 +61,6 @@ jobs:
 
   coding-standards:
     name: Coding Standards
-    if: false
     runs-on: [self-hosted, Linux, x64]
     container: shivammathur/node:latest
     steps:
@@ -129,7 +126,7 @@ jobs:
         with:
           php-version: '8.1'
           coverage: pcov
-          extensions: zip, mbstring, pdo_mysql, mysqli, openssl
+          extensions: zip, mbstring, pdo_mysql, mysqli
           tools: composer, phpunit
 
       - name: Get Composer Cache Directory
