--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -117,7 +117,4 @@ jobs:
         run: kubectl -n ${{ env.NAMESPACE }} wait pods -l app=api --for condition=Ready --timeout=60s
 
       - name: Clear cache
-        run: kubectl -n ${{ env.NAMESPACE }} exec deployments/api -it -- php app.php cache:clean
-
-      - name: Clear cache
-        run: kubectl -n ${{ env.NAMESPACE }} exec deployments/api -it -- php app.php migrate
+        run: kubectl -n ${{ env.NAMESPACE }} exec deployments/api -i -- php app.php migrate
