Fix deployment job

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -116,5 +116,5 @@ jobs:
       - name: Verify service ready
         run: kubectl -n ${{ env.NAMESPACE }} wait pods -l app=api --for condition=Ready --timeout=60s
 
-      - name: Clear cache
-        run: kubectl -n ${{ env.NAMESPACE }} exec deployments/api -i -- php app.php migrate
+      - name: Migrate database
+        run: kubectl -n ${{ env.NAMESPACE }} exec deployments/api -- php app.php migrate
