--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -118,5 +118,7 @@ jobs:
 
       - name: Migrate database
         run: |
-          kubectl -n ${{ env.NAMESPACE }} exec deployments/api -- php app.php list
-          kubectl -n ${{ env.NAMESPACE }} exec deployments/api -- php app.php migrate -s
+          export API_ACTIVE_POD=$(kubectl get pod -n ${{ env.NAMESPACE }} | grep 'api' | awk 'END {print $1}')
+          echo $API_ACTIVE_POD
+          kubectl -n ${{ env.NAMESPACE }} describe pod $(API_ACTIVE_POD)
+          kubectl -n ${{ env.NAMESPACE }} exec pod/$(API_ACTIVE_POD) -- php app.php migrate -s
