--- a/.rr.yaml
+++ b/.rr.yaml
@@ -4,15 +4,24 @@ rpc:
   listen: tcp://127.0.0.1:6001
 
 server:
-  command: "php app.php"
+  command: 'php app.php'
   relay: pipes
 
 http:
   address: 0.0.0.0:8080
-  middleware: [ "gzip", "http_metrics" ]
+  middleware:
+    - gzip
+    - http_metrics
   pool:
+    num_workers: 1
     supervisor:
       max_worker_memory: 100
+
+kv:
+  local:
+    driver: memory
+    config:
+      interval: 60
 
 logs:
   mode: production
@@ -20,3 +29,9 @@ logs:
 
 metrics:
   address: 0.0.0.0:2112
+
+jobs:
+  pool:
+    num_workers: 2
+    max_worker_memory: 100
+  consume: {  }
